--- a/changelog.txt
+++ b/changelog.txt
@@ -2,14 +2,20 @@
 SETUP
   v1.0 to 1.01: 
    - Keyboard mode added: Program is now fully useable without mouse.
+   
   v1.01 to 1.1:
-   - Just to fixes: 
-   - Bug fix: Program tries no more to load config when standard cfg was set
-   - Bug fix: MPU401 will no longer be tested when MPU is disabled
+   - Just fixed two stupid errors.... 
+   - Bug fix: If the configuration file was not found and therefore the default 
+              settings are used, due to a bug the program tried to read the  
+              configuration file again and crashed. 
+   - Bug fix: 
+              MPU401 will no longer be tested when MPU is disabled.....
+              
   v1.1 to 1.2
-   - Set default values if controller detection failed
+   - Added doubble check for controller detection
    - Added enhanced OPL4 support
    - Added more advanced options in a second screen
-   - Renamed some options to fit with the datasheet
-   - Some small bugfixes 
-     (textcursor disappeard on exit, one option was not changeable in keyboard mode..) 
+   - Renamed some options to fit with their names in the datasheets
+   - Two small bugfixes 
+     (sometimes the textcursor disappeard on exit, 
+      option "protect codes shadow registers" was not changeable in keyboard mode) 
