--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,18 @@
 
+MIXER
+ 1.0
+ - Added AUX1 as possible input 
+ - Made some adjustments in the programs appearance, window and text alignments and so on
+ - Some smaller adjustments and improvements of the code
+
+ 1.1
+ - Keyboard mode added: Program is now fully useable without mouse.
+ - Added parameters "K" and "?"
+ - Bugfix: There was a bug in the code to set Mono/Stereo modes}
+
+
+
+
 SETUP
   v1.0 to 1.01: 
    - Keyboard mode added: Program is now fully useable without mouse.
